# Source/Topica.Server/Topica.Server/Auth/Configure.cs
@@ -1,8 +1,13 @@
 ﻿using AspNetCore.Authentication.ApiKey;
+using Azure.Core.Pipeline;
 using Events.Server.Auth.ApiKey;
 using Microsoft.AspNetCore.Authentication;
+using Microsoft.AspNetCore.Authentication.BearerToken;
 using Microsoft.AspNetCore.Authentication.JwtBearer;
+using Microsoft.IdentityModel.JsonWebTokens;
+using Microsoft.IdentityModel.Tokens;
 using Microsoft.OpenApi.Models;
+using System.Text;
 
 namespace Events.Server.Auth
 {
@@ -16,15 +21,23 @@ namespace Events.Server.Auth
                 {
                     Name = "Authorization",
                     Type = SecuritySchemeType.Http,
-                    Scheme = "basic",
+                    Scheme = "Basic",
                     In = ParameterLocation.Header,
-                    Description = "Basic Authorization header using the Bearer scheme."
+                    Description = "Basic Authorization header"
                 });
                 options.AddSecurityDefinition("ApiKey", new OpenApiSecurityScheme
                 {
                     Type = SecuritySchemeType.ApiKey,
                     In = ParameterLocation.Header,
                     Name = new ApiKeyAuthenticationOptions().ApiKeyHeaderName,
+                });
+                options.AddSecurityDefinition("Bearer", new OpenApiSecurityScheme
+                {
+                    Description = "JWT Authorization header using the Bearer scheme.",
+                    Name = "Authorization",
+                    In = ParameterLocation.Header,
+                    Type = SecuritySchemeType.ApiKey,
+                    Scheme = "Bearer"
                 });
                 options.AddSecurityRequirement(new OpenApiSecurityRequirement
                  {
@@ -49,6 +62,17 @@ namespace Events.Server.Auth
                             }
                         },
                         new string[] {}
+                    },
+                    {
+                        new OpenApiSecurityScheme
+                        {
+                            Reference = new OpenApiReference
+                            {
+                                Type = ReferenceType.SecurityScheme,
+                                Id = "Bearer"
+                            }
+                        },
+                        new string[] {}
                     }
                  });
             });
@@ -56,35 +80,62 @@ namespace Events.Server.Auth
             return service;
         }
 
-        public static IServiceCollection ConfigureAuthorization(this IServiceCollection services)
+        public static IServiceCollection ConfigureAuthorization(this IServiceCollection services, IConfiguration configuration)
         {
             services.AddAuthorization(options =>
             {
                 options.AddPolicy("Smart", policy =>
                 {
                     policy.AddAuthenticationSchemes(new[] { ApiKeyDefaults.AuthenticationScheme, "Basic" });
-                    policy.Requirements.Add(new RoleRequirements());
+                    policy.AddRequirements(new RoleRequirements());
                 });
+                options.AddPolicy("Bearer", policy =>
+                {
+                    policy.RequireAuthenticatedUser()
+                    .AddAuthenticationSchemes(JwtBearerDefaults.AuthenticationScheme).Build();
+                });
+
             });
+
             services.AddAuthentication(options =>
             {
                 options.DefaultAuthenticateScheme = "Smart";
                 options.DefaultChallengeScheme = "Smart";
 
-            }).AddPolicyScheme("Smart", "Basic Authorization or Apikey", options =>
+            }).AddJwtBearer(JwtBearerDefaults.AuthenticationScheme, options =>
+            {
+                options.TokenValidationParameters = new TokenValidationParameters
+                {
+                    ValidIssuer = "Topica",
+                    ValidAudience = "Topica:UI",
+                    IssuerSigningKey = new SymmetricSecurityKey(Encoding.UTF8.GetBytes(configuration["SecretKey"])),
+                    LogValidationExceptions = true,
+                    ValidateIssuer = true,
+                    ValidateAudience = true,
+                    ValidateLifetime = false,
+                    ValidateIssuerSigningKey = true
+                };
+            })
+            .AddPolicyScheme("Smart", "Basic Authorization or Apikey", options =>
             {
                 options.ForwardDefaultSelector = context =>
                 {
 
-                    var apiHeader = context.Request.Headers[new ApiKeyAuthenticationOptions().ApiKeyHeaderName].FirstOrDefault();
-                    if (apiHeader is not null)
+                    if (context.Request.Headers[new ApiKeyAuthenticationOptions().ApiKeyHeaderName].FirstOrDefault() is not null)
                         return ApiKeyDefaults.AuthenticationScheme;
 
                     var authHeader = context.Request.Headers["Authorization"].FirstOrDefault();
-                    if (authHeader?.StartsWith("Basic ") == true)
+
+                    if (authHeader?.StartsWith("Bearer ", StringComparison.InvariantCultureIgnoreCase) == true)
+                    {
+                        return JwtBearerDefaults.AuthenticationScheme;
+                    }
+
+                    if (authHeader?.StartsWith("Basic ", StringComparison.InvariantCultureIgnoreCase) == true)
                     {
                         return "Basic";
                     }
+
                     return "Basic";
                 };
             })
